# local-bite

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
libs/common/: Cargo.toml
libs/common/src/: errors.rs  jwt.rs  lib.rs  middleware.rs  models.rs  paginated_response.rs  response.rs
nginx/: nginx.conf
services/auth/: .env  Cargo.toml  Dockerfile
services/auth-Copy/migrations/: 0001_init.sql
services/auth-Copy/src/: db.rs
services/auth-Copy/src/dtos/: login_request.rs  user_response.rs
services/auth-Copy/src/models/: user.rs
services/auth-Copy/src/repository/: repository.rs
services/auth/.sqlx/: query-b06d94a3b0a50b5ad68bb81494a0a6e902232caf6034a426b692f03ddde92b63.json  query-b43ec7e5c30e033e87352c0e68129bdd3d1bb32d390515eba6ae40975e8a66c4.json  query-de06c47092b5c792f98b12fa4f6cfb6bfca0411ae6cbed1b057b1660abb98362.json
services/auth/migrations/: 0001_init.sql
services/auth/src/: main.rs
services/auth/src/dtos/: add_worker_request.rs  create_farm_request.rs  create_farm_response.rs  login_response.rs  mod.rs  register_request.rs  update_farm_request.rs  update_user_request.rs  worker_dto.rs
services/auth/src/handlers/: auth.rs  farms.rs  mod.rs  users.rs
services/auth/src/middleware/: auth_middleware.rs
services/auth/src/models/: farms.rs  mod.rs  user.rs
services/auth/src/repository/: farm_repository.rs  mod.rs  repository.rs
services/auth/src/service/: farm_service.rs  mod.rs  service.rs  user_service.rs
services/orders/: .env  Cargo.toml  Dockerfile
services/orders/migrations/: 0002_initial.sql
services/orders/src/: main.rs  routes.rs
services/orders/src/dtos/: mod.rs
services/orders/src/dtos/analytics/: analytics_query.rs  analytics_response.rs  mod.rs
services/orders/src/dtos/order/: create_order_request.rs  create_order_response.rs  list_orders_query.rs  mod.rs  order_response.rs  update_status_request.rs
services/orders/src/dtos/order_item/: mod.rs  new_order_item_dto.rs  order_item_request.rs  order_item_response.rs
services/orders/src/dtos/product/: mod.rs  product_api_data.rs  product_api_response.rs  product_snapshot.rs
services/orders/src/handlers/: orders.rs
services/orders/src/models/: mod.rs  order.rs  order_item.rs  order_status.rs
services/orders/src/repositories/: mod.rs  order_item_repository.rs  order_repository.rs
services/orders/src/services/: mod.rs  order_service.rs  product_service.rs
services/productions/: .env  Cargo.toml  Dockerfile
services/productions/migrations/: 0001_initial.sql
services/productions/src/: db.rs  main.rs  routes.rs
services/productions/src/dtos/: create_process_step_request.rs  create_production_batch_request.rs  mod.rs  process_step_response.rs  production_batch_response.rs  raw_material_api_data.rs  raw_material_request.rs  raw_material_response.rs  update_process_step_request.rs  update_production_batch_request.rs
services/productions/src/handlers/: batches.rs  materials.rs  mod.rs  steps.rs
services/productions/src/models/: batch_raw_material.rs  insert_production_params.rs  insert_raw_material_params.rs  insert_step_params.rs  mod.rs  process_step.rs  production_batch.rs  query.rs  update_production_params.rs  update_step_params.rs
services/productions/src/repositories/: batch_repository.rs  mod.rs  raw_materials_repository.rs  step_repository.rs
services/productions/src/services/: batch_service.rs  mod.rs  raw_materials_service.rs  step_service.rs
services/products/: .env  Cargo.toml  Dockerfile
services/products/migrations/: 20240101000000_init.sql
services/products/src/: main.rs  routes.rs
services/products/src/dtos/: clients.rs  create_product_request.rs  decrement_request.rs  mod.rs  provenance_response.rs  update_product_request.rs
services/products/src/handlers/: image_handler.rs  mod.rs  products.rs  products_handler.rs  public.rs  public_handler.rs  qr.rs  qr_handler.rs  upload.rs
services/products/src/models/: batch_ref.rs  insert_product_params.rs  mod.rs  process_step_ref.rs  product.rs  query.rs  raw_material_ref.rs  update_product_params.rs
services/products/src/repositories/: mod.rs  product_repository.rs
services/products/src/service/: image_service.rs  mod.rs  qr_service.rs
services/products/src/services/: image_service.rs  mod.rs  product_service.rs  provenance_service.rs  qr_service.rs
services/products/src/utils/: mod.rs  qr_utils.rs
services/raw-materials/: .env  Cargo.toml  Dockerfile
services/raw-materials/migrations/: 20240101000000_init.sql
services/raw-materials/src/: main.rs  routes.rs
services/raw-materials/src/dtos/: adjust_quantity_request.rs  create_raw_material_request.rs  mod.rs  update_raw_material_request.rs
services/raw-materials/src/handlers/: materials.rs  mod.rs
services/raw-materials/src/models/: mod.rs  models.rs  query.rs  raw_material.rs
services/raw-materials/src/repository/: repository.rs
services/raw-materials/src/service/: mod.rs  service.rs
