[workspace]
members = [
    "services/auth"
]
resolver = "2"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "10.3.0"
argon2 = "0.5"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"