[workspace]
members = [
    "services/auth",
    "libs/common"
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "10.3.0"
argon2 = "0.5"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
common = { path = "libs/common" }
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
rand = "0.8.5"
hyper = "1.8.1"

