[workspace]
members = [
    "services/auth",
    "libs/common",
    "services/raw-materials",
    "services/productions",
    "services/products",
    "services/orders"
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "bigdecimal"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = { version = "9" }
argon2 = "0.5"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
common = { path = "libs/common" }
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
rand = "0.8.5"
hyper = "1.8.1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
http = "1.4.0"
bigdecimal = { version = "0.4.10", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }


