[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
argon2 = { workspace = true }