[package]
name = "orders"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../libs/common" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bigdecimal = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }