[package]
name = "products"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
common = { workspace = true }
rand = { workspace = true }
tower-http = {workspace = true}
http = { workspace = true }
tracing-subscriber = { workspace = true }
bigdecimal = { workspace = true }
image = "0.25.9"
qrcode = "0.14.1"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.13.2", features = ["json"] }
