[package]
name = "products"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
common = { workspace = true }
tower-http = {workspace = true}
tracing-subscriber = { workspace = true }
bigdecimal = { workspace = true }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
qrcode = { version = "0.14.1", features = ["image"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { workspace = true }
